--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="col-xs-8 col-xs-offset-2">
-  <button class="btn btn-primary">Load cars</button>
+  <button class="btn btn-primary" (click)="loadCars()" >Load cars</button>
   <hr>
   <ul class="list-group">
     <li class="list-group-item" *ngFor="let car of cars">
