--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,19 @@
 <div class="col-xs-8 col-xs-offset-2">
+  <p>car name</p>
+  <input type="text" class="form-control" [(ngModel)]="carName">
+  <p>car color</p>
+  <input type="text" class="form-control" [(ngModel)]="carColor">
+  <button class="btn btn-success" (click)="addCar()">Add car</button>
+  <hr>
   <button class="btn btn-primary" (click)="loadCars()" >Load cars</button>
   <hr>
   <ul class="list-group">
     <li class="list-group-item" *ngFor="let car of cars">
-      <span class="badge">{{car.id}}</span> {{car.name}} ({{car.color}})
+      <span class="badge" [ngStyle]="{background: car.color}">
+        {{car.id}}
+      </span>
+      {{car.name}}
+      ({{car.color}})
     </li>
   </ul>
 </div>
