add put to/from server

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
       </span>
       {{car.name}}
       ({{car.color}})
+      <button class="btn btn-xs btn-info" (click)="setNewColor(car)">Change color</button>
     </li>
   </ul>
 </div>
